--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Ismaël Jecker
-description: description
+description: Institute of Science and Technology Austria (IST Austria)
 is_project_page: false
