--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
+github:
+ is_project_page: false
 theme: jekyll-theme-slate
 title: Ismaël Jecker
-description: Institute of Science and Technology Austria (IST Austria)
-is_project_page: false
+description: Postdoc, Institute of Science and Technology Austria (IST Austria)
