--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ github:
  is_project_page: false
 theme: jekyll-theme-slate
 title: Ismaël Jecker
-description: Postdoc, Institute of Science and Technology Austria (IST Austria)
+description: Postdoc  
+Institute of Science and Technology Austria (IST Austria)
