--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ theme: jekyll-theme-slate
 github:
   is_project_page: false
 title: Ismaël Jecker
-description: Postdoc  
-Institute of Science and Technology Austria (IST Austria)
+description: Postdoc, Institute of Science and Technology Austria (IST Austria)
