--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-slate
 title: Ismaël Jecker
-description: I am currently a postdoc in Krishnendu Chatterjee's group at the Institute of Science and Technology Austria (IST Austria).
-description2: I did my PhD under the supervision of Emmanuel Filiot and Jean-François Raskin at the Université Libre de Bruxelles (ULB).
+description: Institute of Science and Technology Austria
