--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Ismaël Jecker
-description: Institute of Science and Technology Austria
+description: Faculty of Mathematics, Informatics and Mechanics of the University of Warsaw
